# 6fb-booking

./: .aliases  .env.production  .env.production.example  .env.railway.template  .env.template  .gitignore  .gitignore-strict  .gitmessage  .pre-commit-config.yaml  .secrets.baseline  .session-log  .v2-active  6FB_BUSINESS_RULES.md  6FB_EXTRACTION_STATUS_REPORT.md  6FB_FEATURE_ALIGNMENT.md  6FB_METRICS_FRAMEWORK.md  6FB_PLATFORM_PRD.md  6FB_PLATFORM_REFINEMENT_PLAN.md  6fb_booking.db-shm  999  ADMIN_JOURNEY_TESTING_FINAL_REPORT.md  API_404_FIX_REPORT.md  API_COMPLIANCE.md  API_DISCOVERY_RESULTS.json  API_ENDPOINT_TEST_REPORT.md  API_REFERENCE.md  APPOINTMENT_REMINDER_SYSTEM_COMPLETE.md  AVAILABLE_TOOLS_REFERENCE.md  BARBER_PAYOUT_FEATURES.md  BARBER_PROFILES_IMPLEMENTATION_STATUS.md  BARBER_PUBLIC_PROFILE_IMPLEMENTATION_SUMMARY.md  BMAD_INTEGRATION_COMPLETE.md  BOOKBARBER_DEPLOYMENT_GUIDE.md  BOOKEDBARBER_V2_PAYMENT_SYSTEM_VALIDATION_REPORT.md  BOOKEDBARBER_V2_ULTRATHINK_COMPREHENSIVE_ANALYSIS_REPORT.md  BOOKING_API_SUMMARY.md  BOOKING_WORKFLOW_COMPLETION_REPORT.md  BRANCH_PROTECTION_MANUAL_SETUP.md  BROWSER_EXTENSION_TROUBLESHOOTING.md  BROWSER_LOGS_MCP_DEMO_RESULTS.md  (+347 more)
backend/: .dockerignore  .env.auth  .env.dwolla.example  .env.example  .env.payment.template  .env.production  .env.production.template  .env.security.example  .env.sentry.example  .env.staging  .env.template  .eslintrc.js  6fb-dashboard.html  6fb_booking.db-shm  6fb_booking.db-wal  6fb_booking.db.backup_20250624_190616  6fb_booking.db.corrupted_backup_20250624_083604  AI_REVENUE_ANALYTICS_GUIDE.md  AUTH_TEST_RESULTS.md  AUTO_FIXER_SETUP.md  BASIC_PERFORMANCE_REPORT.md  BOOKING_API_DOCUMENTATION.md  BOOKING_SYSTEM_SCHEMA.md  BOOKING_SYSTEM_TEST_REPORT.md  CALENDAR_SETUP_GUIDE.md  COMPREHENSIVE_AUTHENTICATION_TEST_REPORT.md  CORS_RAILWAY_FIXES_SUMMARY.md  CUSTOMER_AUTHENTICATION_TEST_RESULTS.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.celery  Dockerfile.dev  Dockerfile.new  Dockerfile.prod  (+331 more)
(+7069 files in other folders)
