[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "6fb-booking-backend"
version = "1.0.0"
description = "Backend API for 6FB Booking Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "6FB Team", email = "admin@6fb.com"}
]
dependencies = [
    "fastapi==0.115.7",
    "uvicorn[standard]==0.34.0",
    "gunicorn==21.2.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "stripe==11.4.0",
    "twilio",
    "sendgrid",
    "httpx==0.28.1",
    "apscheduler==3.10.4",
    "redis==5.2.1",
    "sentry-sdk[fastapi]==2.20.0",
    "email-validator==2.2.0",
    "python-json-logger==3.2.0",
    "python-dateutil==2.9.0.post0",
    "jinja2==3.1.4",
    "google-auth==2.37.0",
    "google-auth-oauthlib==1.2.1",
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.159.0",
    "cryptography==44.0.0",
    "pytz==2024.2",
    "orjson==3.10.12",
    "typing-extensions==4.12.2"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "black",
    "flake8",
    "mypy",
    "pre-commit"
]

[tool.setuptools]
packages = ["api", "models", "services", "middleware", "utils", "config"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
(
  migrations/
  | venv/
  | __pycache__/
)
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
